Fixed Z index issues that cause the navbar dropdowns to appear behind main content.

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -9,6 +9,9 @@ body {
     font-weight: bold;
 }
 
+.navbar {
+    opacity: 0.9;
+}
 
 .leftBar {
     background-color: rgba(26, 188, 156,1.0);
@@ -19,8 +22,8 @@ body {
     background-color: white;
     border-left: 1px solid rgba(0, 0, 0, 0.1);
     border-right: 1px solid rgba(0, 0, 0, 0.1);
-
 }
+
 
 .rightBar {
     background-color: white;
@@ -107,4 +110,53 @@ body {
 .backBtn {
     color: white;
     font-weight: bold;
+}
+
+.noselect {  /* This code make it so that text is not selectable. */
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
+
+/* Footer below */
+
+.footer {
+    background-color: white;
+    padding-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-top: 1px solid rgba(0, 0, 0, 0.158);
+}
+
+.copyright {
+    text-align: center;
+    opacity: 0.8;
+    padding-bottom: 32px;
+}
+
+.logoFooter {
+    display: block;
+    padding-bottom: 8px;
+}
+
+.bottomBar {
+    width: 100%;
+    height: 5px;
+    background: -webkit-linear-gradient(94deg,#ffc244,#ff6500);
+    -webkit-animation: hue 20s infinite linear;
+}
+
+@-webkit-keyframes hue {
+    from {
+        -webkit-filter: hue-rotate(0deg);
+    }
+
+    to {
+        -webkit-filter: hue-rotate(-360deg);
+    }
 }
